--- a/docs/de-de/modules/ROOT/nav.adoc
+++ b/docs/de-de/modules/ROOT/nav.adoc
@@ -1,2 +1,8 @@
 .Plugins
-* xref:plugins:plugins-system-hinzufuegen.adoc[Plugins dem System hinzufügen]
+* xref:plugins:adding-plugins-system.adoc[Plugins dem System hinzufügen]
+* xref:plugins:installing-added-plugins.adoc[Hinzugefügte Plugins installieren]
+* xref:plugins:configuring-installed-plugins.adoc[Installierte Plugins konfigurieren]
+* xref:plugins:updating-installed-plugins.adoc[Installierte Plugins aktualisieren]
+* xref:plugins:removing-installed-plugins.adoc[Installierte Plugins entfernen]
+* xref:plugins:faq-plugins.adoc[FAQ: Plugins]
+* link:https://developers.plentymarkets.com/[Entwicklerdokumentation^]
