--- a/docs/de-de/modules/plugins/pages/updating-installed-plugins.adoc
+++ b/docs/de-de/modules/plugins/pages/updating-installed-plugins.adoc
@@ -5,9 +5,9 @@
 
 Manchmal stellen Plugin-Anbieter eine neuere Version ihres Plugins zu Verfügung. Hast du so ein Plugin bereits in einem Plugin-Set installiert, musst du es aktualisieren, um es in der neueren Version zu nutzen. Da es sich hierbei um eine Änderung an dem Plugin-Set handelt, solltest du vor dem Aktualiseren des Plugins eine Kopie des Sets erstellen.
 
-include::./_textblocks/tips/sicherheitskopie.adoc[]
+include::partial$sicherheitskopie.adoc[]
 
-include::./_textblocks/instructions/plugin-set-erstellen.adoc[]
+include::partial$plugin-set-erstellen.adoc[]
 
 Die Möglichkeiten zum Aktualisieren unterscheiden sich, je nachdem ob du das Plugin <<marketplace-plugins, auf plentyMarketplace erworben>> oder <<git-plugins, über Git eingebunden>> hast.
 
