--- a/docs/en-gb/modules/plugins/pages/adding-plugins-system.adoc
+++ b/docs/en-gb/modules/plugins/pages/adding-plugins-system.adoc
@@ -1,11 +1,7 @@
 = Adding plugins to the system
-:lang: en
-include::{includedir}/_header.adoc[]
 :author: team-plugin-core
 :keywords: plugin, plug in, plug-in, extension, git, github, bitbucket, gitlab, integrations assistent, integrations, plentymarketplace, plenty marketplace, marketplace
 :description: Add plugins to your system via plentyMarketplace, Git or the integrations assistant.
-:position: 10
-:id: BZCJL1G
 
 [.next-navigation]
 <<plugins/installing-added-plugins#, Installing added plugins icon:long-arrow-right[]>>
@@ -45,12 +41,12 @@ NOTE: If you select the plugins via the assistant, the installation process does
 
 You will add most plugins to your system via link:https://marketplace.plentymarkets.com/en[plentyMarketplace^]{nbsp}icon:external-link[].plentyMarketplace offers a great selection of different plugins that you can purchase and use right away. To purchase a plugin on plentyMarketplace, proceed as follows:
 
-include::./_textblocks/instructions/marketplace-plugin-kaufen-en_gb.adoc[]
+include::partial$marketplace-plugin-kaufen-en_gb.adoc[]
 
-include::./_textblocks/notes/hinzugefuegte-plugins-installieren-en_gb.adoc[]
+include::partial$hinzugefuegte-plugins-installieren-en_gb.adoc[]
 
 [[table-purchase-options]]
-include::./_textblocks/tables/marketplace-kaufoptionen-en_gb.adoc[]
+include::partial$marketplace-kaufoptionen-en_gb.adoc[]
 
 [#git-plugins]
 == Git plugins
@@ -84,14 +80,14 @@ This section describes how to add a Git repository to your system. By adding the
 
 If you want to add a private repository, first generate an access token as described above. When adding a public repository, you don’t need an access token.
 
-include::./_textblocks/instructions/git-repository-hinzufuegen-en_gb.adoc[]
+include::partial$git-repository-hinzufuegen-en_gb.adoc[]
 
-include::./_textblocks/notes/hinzugefuegte-plugins-installieren-en_gb.adoc[]
+include::partial$hinzugefuegte-plugins-installieren-en_gb.adoc[]
 
 [#git-repositories-functional-overview]
 === Functional overview
 
-include::./_textblocks/tables/git-repository-verwaltung-en_gb.adoc[]
+include::partial$git-repository-verwaltung-en_gb.adoc[]
 
 '''
 
