--- a/docs/en-gb/modules/plugins/pages/configuring-installed-plugins.adoc
+++ b/docs/en-gb/modules/plugins/pages/configuring-installed-plugins.adoc
@@ -1,21 +1,17 @@
 = Configuring installed plugins
-:lang: en
-include::{includedir}/_header.adoc[]
 :author: team-plugin-core
 :keywords: plugin, plug in, plug-in, extension, plugin configuration, plug in configuration, plug-in configuration, plugin settings, plug in settings, plug-in settings, container links, import configuration, import settings, export configuration, export settings
 :description: Configure your plugins.
-:position: 30
-:id: H4HJIKA
 
 [.previous-navigation]
 <<plugins/installing-added-plugins#, icon:long-arrow-left[] Installing added plugins>>
 
 '''
 
-include::./_textblocks/notes/installierte-plugins-konfigurieren-en_gb.adoc[]
+include::partial$installierte-plugins-konfigurieren-en_gb.adoc[]
 
 This page contains information on plugin configuration in general. This includes the <<local-vs-global-configuration,difference between local and global settings>> as well as <<configuration-export-import,exporting and importing local configurations>>. It also explains <<container-links,container links>>.
-include::./_textblocks/explanations/container-verknuepfung-en_gb.adoc[]
+include::partial$container-verknuepfung-en_gb.adoc[]
 
 [#local-vs-global-configuration]
 == Local vs. global configuration
@@ -29,32 +25,32 @@ Global configurations are carried out in the *Setup* menu. When you configure a 
 // @TODO
 // Add that global configs are retained according to our BPs (after writing said BPs), but that we cannot guarantee it.
 
-include::./_textblocks/importants/plugin-konfigurationsausnahmen-en_gb.adoc[]
+include::partial$plugin-konfigurationsausnahmen-en_gb.adoc[]
 
 [#configuration-export-import]
 == Exporting and importing local configurations
 
 You can export and import local configurations of a plugin. By exporting and importing configurations, you can easily transfer from one plugin set to another. Proceed as follows:
 
-include::./_textblocks/instructions/plugin-konfiguration-exportieren-en_gb.adoc[]
+include::partial$plugin-konfiguration-exportieren-en_gb.adoc[]
 
-include::./_textblocks/instructions/plugin-konfiguration-importieren-en_gb.adoc[]
+include::partial$plugin-konfiguration-importieren-en_gb.adoc[]
 
-include::./_textblocks/warnings/import-limitierung-en_gb.adoc[]
+include::partial$import-limitierung-en_gb.adoc[]
 
-include::./_textblocks/tips/batch-plugin-konfiguration-en_gb.adoc[]
+include::partial$batch-plugin-konfiguration-en_gb.adoc[]
 
 [#container-links]
 == Container links
 
-include::./_textblocks/explanations/container-verknuepfung-en_gb.adoc[]
+include::partial$container-verknuepfung-en_gb.adoc[]
 To see which containers to link, check the instructions of the respective plugin.
 
 To select container links, proceed as follows:
 
-include::./_textblocks/instructions/plugin-container-verknuepfung-en_gb.adoc[]
+include::partial$plugin-container-verknuepfung-en_gb.adoc[]
 
-include::./_textblocks/tips/standard-container-verknuepfungen-en_gb.adoc[]
+include::partial$standard-container-verknuepfungen-en_gb.adoc[]
 
 '''
 
