--- a/docs/en-gb/modules/plugins/pages/faq-plugins.adoc
+++ b/docs/en-gb/modules/plugins/pages/faq-plugins.adoc
@@ -1,11 +1,7 @@
 = FAQ: Plugins
-:lang: en
-include::{includedir}/_header.adoc[]
 :author: team-plugin-core
 :keywords: plugin, plug in, plug-in, extension, faq
 :description: Get answers to the most frequently asked questions around plugins.
-:position: 60
-:id: TMNH3DV
 
 This page contains frequently asked questions about plugins.
 
@@ -29,11 +25,11 @@ This sections answers questions regarding the use of plugins.
 [qanda]
 Why does my plugin not work?::
     Make sure that you’ve successfully deployed the plugin. You can tell that the plugin has been deployed if the *Active Version* column shows a version number. If there is no version number, deploy the plugin set (icon:save[role=green]). +
-    image:plugins/assets/plugin-aktive-version.png[width=640]
+    image:image$plugin-aktive-version.png[width=640]
 
 I’ve deployed the plugin set, but there’s no active version displayed. What’s the problem?::
     There may be multiple causes. First, it’s possible that deployment failed. You can see if the deployment process was successful by checking the timestamp in the plugin overview: +
-    image:plugins/assets/plugin-set-zeitstempel.png[width=640]
+    image:image$plugin-set-zeitstempel.png[width=640]
 
 The deployment has failed and the details say `Plugin MyPlugin requires “xy”.:` What does this mean?::
     This entry means the plugin requires another plugin called _xy_ to run properly. You have to install this second plugin in your plugin set before you can deploy _MyPlugin_.
