--- a/docs/en-gb/modules/plugins/pages/installing-added-plugins.adoc
+++ b/docs/en-gb/modules/plugins/pages/installing-added-plugins.adoc
@@ -1,11 +1,7 @@
 = Installing added plugins
-:lang: en
-include::{includedir}/_header.adoc[]
 :author: team-plugin-core
 :keywords: plugin, plug in, plug-in, extension, plugin set, plug in set, plug-in set, back end plugin set, back end plug in set, back end plug-in set, client, deploy, publish, install plugin, install plug in, install plug-in
 :description: Install plugins and link them to a client or user account.
-:position: 20
-:id: EGDTDOH
 
 [.previous-next-navigation]
 <<plugins/adding-plugins-system#, icon:long-arrow-left[] Adding plugins to the system>>
@@ -20,14 +16,14 @@ To use plugins, you first have to include them in a plugin set and deploy the se
 
 Plugins can only be used as part of a plugin set. Before you install a plugin, you first have to create a new plugin set. Even if you want to install a plugin in an existing plugin set, you should work with a copy of the set, so that you can easily revert your changes if necessary.
 
-include::./_textblocks/tips/sicherheitskopie-en_gb.adoc[]
+include::partial$sicherheitskopie-en_gb.adoc[]
 
-include::./_textblocks/instructions/plugin-set-erstellen-en_gb.adoc[]
+include::partial$plugin-set-erstellen-en_gb.adoc[]
 
 You can change the name of the plugin set at any time in the *Plugin set settings* (icon:cog[]).
 
 //Remove once there's a more complete error message in the back end.
-include::./_textblocks/warnings/plugin-set-name-en_gb.adoc[]
+include::partial$plugin-set-name-en_gb.adoc[]
 
 :leveloffset: +1
 
@@ -38,9 +34,9 @@ include::./_chapters/plugin-in-set-installieren-en_gb.adoc[]
 
 Once you’re satisfied with your plugin set, you can switch it live by linking it to one of your clients. Proceed as described below.
 
-include::./_textblocks/tips/plugin-set-vorschau-en_gb.adoc[]
+include::partial$plugin-set-vorschau-en_gb.adoc[]
 
-include::./_textblocks/instructions/plugin-set-verknuepfen-en_gb.adoc[]
+include::partial$plugin-set-verknuepfen-en_gb.adoc[]
 
 [#back-end-plugin-set]
 == Linking plugin sets to user accounts
