--- a/docs/en-gb/modules/plugins/pages/removing-installed-plugins.adoc
+++ b/docs/en-gb/modules/plugins/pages/removing-installed-plugins.adoc
@@ -1,11 +1,7 @@
 = Removing installed plugins
-:lang: en
-include::{includedir}/_header.adoc[]
 :author: team-plugin-core
 :keywords: plugin, plug in, plug-in, extension, remove, delete, deactivate, git repository, git, repository
 :description: Remove plugins from your plugin sets.
-:position: 50
-:id: MSCTNZP
 
 There are multiple ways to remove plugins installed in a plugin set. You can <<deactivating-plugins, deactivate>> individual plugins, so that they’re no longer loaded in your online store and back end, or completely <<deleting-plugin-from-plugin-sets, delete them from a plugin set>>. If you want to delete all plugins from a set, you can <<deleting-plugin-set, delete the plugin set itself>> instead.
 
@@ -29,11 +25,11 @@ To deactivate a plugin, switch the plugin inactive (icon:toggle-off[]).
 
 When you delete a plugin, all of its files are removed from the plugin set. Delete a plugin if you don’t want to use it anymore.
 
-include::./_textblocks/explanations/plugin-loeschen-einstellungen-en_gb.adoc[]
+include::partial$plugin-loeschen-einstellungen-en_gb.adoc[]
 
 To delete a plugin, proceed as follows:
 
-include::./_textblocks/instructions/plugin-loeschen-en_gb.adoc[]
+include::partial$plugin-loeschen-en_gb.adoc[]
 
 After deleting a plugin, you can find it among your uninstalled plugins. If you purchased the plugin on plentyMarketplace, you cannot completely remove it from your system.
 
@@ -42,15 +38,15 @@ After deleting a plugin, you can find it among your uninstalled plugins. If you 
 
 When you delete a plugin set, all files of all the plugins contained in the set are removed from your active storage. Delete a plugin set if you don’t want to use any of the contained plugins in this configuration anymore.
 
-include::./_textblocks/explanations/plugin-loeschen-einstellungen-en_gb.adoc[]
+include::partial$plugin-loeschen-einstellungen-en_gb.adoc[]
 
 To delete a plugin set, proceed as follows:
 
-include::./_textblocks/instructions/plugin-set-loeschen-en_gb.adoc[]
+include::partial$plugin-set-loeschen-en_gb.adoc[]
 
 [#deleting-git-repositories]
 == Deleting Git repositories:
 
 If you don’t need a Git plugin anymore, you can delete the corresponding repository to completely remove the plugin from your system. To delete a Git repository, you first have to <<deleting-plugins-from-plugin-sets, delete the corresponding plugin from all plugin sets>>.
 
-include::./_textblocks/instructions/git-repository-loeschen-en_gb.adoc[]
+include::partial$git-repository-loeschen-en_gb.adoc[]
