--- a/docs/en-gb/modules/plugins/pages/updating-installed-plugins.adoc
+++ b/docs/en-gb/modules/plugins/pages/updating-installed-plugins.adoc
@@ -1,17 +1,13 @@
 = Updating installed plugins
-:lang: en
-include::{includedir}/_header.adoc[]
 :author: team-plugin-core
 :keywords: plugin, plug in, plug-in, extension, update, git, branch, commit
 :description: Update your plugins to the latest version.
-:position: 40
-:id: YTCRHEX
 
 Occasionally, plugin developers may provide a new version of their plugin. If you’ve already installed such a plugin in a plugin set, you have to update it to use the new version. Since this means changing your plugin set, you should create a copy of your plugin set before updating the plugin.
 
-include::./_textblocks/tips/sicherheitskopie-en_gb.adoc[]
+include::partial$sicherheitskopie-en_gb.adoc[]
 
-include::./_textblocks/instructions/plugin-set-erstellen-en_gb.adoc[]
+include::partial$plugin-set-erstellen-en_gb.adoc[]
 
 Depending on whether you <<marketplace-plugins, purchased the plugin from plentyMarketplace>> or <<git-plugins, added it to your system via Git>>, the possibilities you have for updating are different.
 
@@ -20,7 +16,7 @@ Depending on whether you <<marketplace-plugins, purchased the plugin from plenty
 
 If there is an update for a plugin, under *Action*, the *Update* button of the plugin is highlighted.
 
-include::./_textblocks/instructions/plugin-aktualisieren-en_gb.adoc[]
+include::partial$plugin-aktualisieren-en_gb.adoc[]
 
 Marketplace plugins cannot be downgraded to an older version. If you want to use an older version of the plugin, you have to <</plugins/removing-installed-plugins#deleting-plugin-from-plugin-set, delete>> and then <<plugins/installing-added-plugins, reinstall>> it.
 
@@ -34,18 +30,18 @@ You can update a Git plugin in different ways. To use a newer version of the cur
 
 If your Git repository contains a newer state of the plugin and you want to use it in plentymarkets, you can pull the branch.
 
-include::./_textblocks/instructions/git-branch-pullen-en_gb.adoc[]
+include::partial$git-branch-pullen-en_gb.adoc[]
 
 [#switching-branches]
 === Switching branches
 
 You can switch between branches of a Git repository. Branches are local settings. In other words, you can use the same plugin in multiple sets, but work with different branches. This is useful if you want to, for example, use a stable branch in your active plugin set and test a new feature in an inactive plugin set at the same time.
 
-include::./_textblocks/instructions/git-branch-wechseln-en_gb.adoc[]
+include::partial$git-branch-wechseln-en_gb.adoc[]
 
 [#switching-commits]
 === Switching commits
 
 If you want to use a different state of your repository, but didn’t create a branch for it, you can also access individual commits.
 
-include::./_textblocks/instructions/git-commit-wechseln-en_gb.adoc[]
+include::partial$git-commit-wechseln-en_gb.adoc[]
