update internal links

--- a/docs/de-de/modules/plugins/pages/faq-plugins.adoc
+++ b/docs/de-de/modules/plugins/pages/faq-plugins.adoc
@@ -58,4 +58,4 @@ Ich habe alle bisher genannten Punkte geprüft, das Plugin funktioniert aber imm
 
 [qanda]
 Nachdem ich ein Plugin installiert und bereitgestellt habe, kann ich mich nicht mehr in mein System einloggen. Wie komme ich wieder in mein Backend?::
-    Log dich im <<willkommen/login-rundgang#70, abgesicherten Modus>> ein. <<installierte-plugins-entfernen#plugin-deaktivieren, Deaktivere>> das Plugin. Du solltest dich jetzt wieder normal einloggen können.
+    Log dich im xref:willkommen:login-rundgang.adoc#70[abgesicherten Modus] ein. <<installierte-plugins-entfernen#plugin-deaktivieren, Deaktivere>> das Plugin. Du solltest dich jetzt wieder normal einloggen können.
