--- a/docs/de-de/modules/plugins/partials/plugin-deaktivieren.adoc
+++ b/docs/de-de/modules/plugins/partials/plugin-deaktivieren.adoc
@@ -7,6 +7,6 @@ Deaktivierte Plugins werden beim Bereitstellen eines Plugin-Sets nicht berücksi
 
 Ob du ein Plugin durch Aktivieren und Deaktivieren aktiv oder inaktiv schalten kannst, kannst du im Menü *Plugins » Plugin-Übersicht* an der Spalte *Aktive Version* erkennen. Ist hier eine Versionsnummer eingetragen, musst du das Set nicht bereitstellen, um das Plugin aktiv zu schalten.
 
-Du solltest ein Plugin dann deaktivieren, wenn du es nur vorübergehend nicht nutzen möchtest. Anders als beim Löschen eines Plugins, bleibt beim Deaktivieren die <<plugins/installierte-plugins-konfigurieren#lokale-vs-globale-konfiguration, lokale Konfiguration>> des Plugin erhalten.
+Du solltest ein Plugin dann deaktivieren, wenn du es nur vorübergehend nicht nutzen möchtest. Anders als beim Löschen eines Plugins, bleibt beim Deaktivieren die xref:plugins:installierte-plugins-konfigurieren.adoc#lokale-vs-globale-konfiguration[lokale Konfiguration] des Plugin erhalten.
 
 Zum Deaktivieren eines Plugins, andere den Zustand des Plugins zu inaktiv (icon:toggle-off[]).
