--- a/docs/de-de/modules/plugins/partials/plugin-loeschen-einstellungen.adoc
+++ b/docs/de-de/modules/plugins/partials/plugin-loeschen-einstellungen.adoc
@@ -1,1 +1,1 @@
-Wenn du ein Plugin löschst, gehen dabei alle <<plugins/installierte-plugins-konfigurieren#lokale-vs-globale-konfiguration, lokalen Konfigurationen>> und <<plugins/installierte-plugins-konfigurieren#container-verknuepfungen, Container-Verknüpfungen>> des Plugins verloren. Um lokale Konfigurationen nachhaltig zu sichern, <<plugins/installierte-plugins-konfigurieren#konfiguration-exportieren-importieren, exportiere die Konfigurationen>>. Container-Verknüpfungen können nicht gesichert werden.
+Wenn du ein Plugin löschst, gehen dabei alle xref:plugins:installierte-plugins-konfigurieren.adoc#lokale-vs-globale-konfiguration[lokalen Konfigurationen] und <<plugins/installierte-plugins-konfigurieren#container-verknuepfungen, Container-Verknüpfungen>> des Plugins verloren. Um lokale Konfigurationen nachhaltig zu sichern, xref:plugins:installierte-plugins-konfigurieren.adoc#konfiguration-exportieren-importieren[exportiere die Konfigurationen]. Container-Verknüpfungen können nicht gesichert werden.
