--- a/docs/en-gb/modules/plugins/pages/faq-plugins.adoc
+++ b/docs/en-gb/modules/plugins/pages/faq-plugins.adoc
@@ -57,4 +57,4 @@ I’ve checked all the previous points, but the plugin still doesn’t work prop
 
 [qanda]
 After installing and deploying a plugin, I can no longer log into my system. How can I access my back end again?::
-    Log in using the <<welcome/login-tour#70, safe mode>>. Then <<removing-installed-plugins#deactivating-plugins, deactivate>> the plugin. You should be able to log in normally again.
+    Log in using the xref:welcome:login-tour.adoc#70[safe mode]. Then <<removing-installed-plugins#deactivating-plugins, deactivate>> the plugin. You should be able to log in normally again.
