--- a/docs/en-gb/modules/plugins/pages/updating-installed-plugins.adoc
+++ b/docs/en-gb/modules/plugins/pages/updating-installed-plugins.adoc
@@ -18,7 +18,7 @@ If there is an update for a plugin, under *Action*, the *Update* button of the p
 
 include::partial$plugin-aktualisieren-en_gb.adoc[]
 
-Marketplace plugins cannot be downgraded to an older version. If you want to use an older version of the plugin, you have to <</plugins/removing-installed-plugins#deleting-plugin-from-plugin-set, delete>> and then <<plugins/installing-added-plugins, reinstall>> it.
+Marketplace plugins cannot be downgraded to an older version. If you want to use an older version of the plugin, you have to xref:/plugins:removing-installed-plugins.adoc#deleting-plugin-from-plugin-set[delete] and then <<plugins/installing-added-plugins, reinstall>> it.
 
 [#git-plugins]
 == Git plugins
